--- a/pt-BR/mail/chrome/messenger/activity.properties
+++ b/pt-BR/mail/chrome/messenger/activity.properties
@@ -50,7 +50,7 @@ deletedMessages2=Excluída #1 mensagem de #2;Excluídas #1 mensagens de #2
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=Movida #1 mensagem de #2 para #3;Movidas #1 mensagens de #2 para #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
-copiedMessages=Copiadas #1 mensagem de #2 para #3;Copiadas #1 mensagens de #2 para #3
+copiedMessages=Copiada #1 mensagem de #2 para #3;Copiadas #1 mensagens de #2 para #3
 # LOCALIZATION NOTE (fromServerToServer): #1 source server, #2 destination server
 fromServerToServer=de #1 para #2
 # LOCALIZATION NOTE (deletedFolder): #1 folder name
