--- a/pt-BR/mail/chrome/messenger/messenger.properties
+++ b/pt-BR/mail/chrome/messenger/messenger.properties
@@ -45,7 +45,7 @@ newSubfolderMenuItem=Subpasta…
 newFolder=Nova pasta…
 newSubfolder=Nova pasta…
 markFolderRead=Marcar pasta como lida;Marcar pastas como lidas
-markNewsgroupRead=Mark Newsgroup Read;Mark Newsgroups Read
+markNewsgroupRead=Marcar newsgroup como lido;Marcar newsgroups como lidos
 folderProperties=Propriedades da pasta
 newTag=Nova tag…
 getNextNMessages=Receber próximas %S mensagens
@@ -378,7 +378,7 @@ confirmViewDeleteTitle=Confirmar
 confirmViewDeleteMessage=Tem certeza que deseja excluir este modo de visualização?
 
 # for virtual folders
-confirmSavedSearchTitle=Confirm Delete
+confirmSavedSearchTitle=Confirmar exclusão
 confirmSavedSearchDeleteMessage=Tem certeza que deseja excluir esta pasta de pesquisa?
 
 ## @name ENTER_PASSWORD_PROMPT
@@ -428,16 +428,16 @@ confirmPhishingUrl=O %1$S acha que esta mensagem é um golpe. Os links da mensag
 # Which one is used depends on Update process state.
 updatesItem_default=Verificar atualizações…
 updatesItem_defaultFallback=Verificar atualizações…
-updatesItem_default.accesskey=C
+updatesItem_default.accesskey=V
 updatesItem_downloading=Recebendo o %S…
 updatesItem_downloadingFallback=Recebendo a atualização…
-updatesItem_downloading.accesskey=D
+updatesItem_downloading.accesskey=R
 updatesItem_resume=Continuar recebendo o %S…
 updatesItem_resumeFallback=Continuar recebendo a atualização…
-updatesItem_resume.accesskey=D
+updatesItem_resume.accesskey=o
 updatesItem_pending=Aplicar agora a atualização recebida…
 updatesItem_pendingFallback=Aplicar agora a atualização recebida…
-updatesItem_pending.accesskey=D
+updatesItem_pending.accesskey=A
 
 # Folder Pane Header Title Strings
 folderPaneHeader_all=Todas as pastas
