--- a/pt-BR/mail/chrome/messenger/preferences/preferences.properties
+++ b/pt-BR/mail/chrome/messenger/preferences/preferences.properties
@@ -15,7 +15,7 @@ confirmResetJunkTrainingText=Tem certeza que deseja excluir todo o treinamento a
 #### Downloads
 desktopFolderName=Área de trabalho
 myDownloadsFolderName=Meus downloads
-chooseAttachmentsFolderTitle=Selecionar a pasta
+chooseAttachmentsFolderTitle=Selecionar a pasta:
 
 #### Applications
 
