--- a/fr/calendar/chrome/lightning/lightning.properties
+++ b/fr/calendar/chrome/lightning/lightning.properties
@@ -69,7 +69,7 @@ imipBarUpdateText=Ce message contient une mise à jour pour un événement exist
 imipBarAlreadyProcessedText=Ce message contient un événement qui a déjà été traité.
 imipBarReplyText=Ce message contient une réponse à une invitation.
 imipBarUnsupportedText=Ce message contient un événement que cette version de Lightning ne peut pas traiter.
-imipBarProcessingFailed=Le traitement du mesage a échoué. État : %1$S.
+imipBarProcessingFailed=Le traitement du message a échoué. État : %1$S.
 imipAcceptInvitation.label=Accepter
 imipCancelInvitation.label=Supprimer
 imipDeclineInvitation.label=Refuser
@@ -90,4 +90,3 @@ itipCancelSubject=Événement annulé : « %1$S »
 itipCancelBody=%1$S a annulé cet événement : « %2$S »
 
 invitationsLink.label=Invitations : %1$S
-
